# git-author-rs

./: Cargo.toml  README.md
src/: command.rs  email_address.rs  error.rs  git.rs  lib.rs  main.rs
src/git/: author.rs  config_file_location.rs  params.rs  replace_filter.rs  replace_target.rs  user_parameter.rs
src/git/author/: author_builder.rs
