[package]
name = "git-author"
version = "1.0.0"
authors = ["block <block.cube.lib@gmail.com>"]
edition = "2018"
description = "Get, set and replace git author information"
documentation = "https://docs.rs/crate/git-author"
repository = "https://github.com/block-cube-lib/git-author-rs"
readme = "README.md"
license = "MIT"

[dependencies]
addr = "0.2.0"
clap = "2.33.0"
thiserror = "1"
