[package]
name = "git-author"
version = "2.1.0"
authors = ["block <block.cube.lib@gmail.com>"]
edition = "2018"
description = """
- You can get or set user.name and user.email at oece.
- You can unset user.name and user.email at once.
- You can replace the author or committer of past commits.
"""
documentation = "https://docs.rs/crate/git-author"
repository = "https://github.com/block-cube-lib/git-author-rs"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.51"
email-address-parser = "1.0.3"
clap = "2.34.0"
once_cell = "1.9.0"
thiserror = "1.0.30"
